--- a/skript/vorwort.tex
+++ b/skript/vorwort.tex
@@ -1,4 +1,5 @@
 \chapter*{Vorwort}
+\lhead{Vorwort}
 Dieses Skript entstand im Rahmen des Mathematischen Seminars
 im Fr"uhrjahrssemester 2014 an der Hochschule f"ur Technik Rapperswil.
 Die Teilnehmer, Studierende der Abteilung f"ur Elektrotechnik der
